# mathpunk-tower-def

./: Cargo.toml
assets/: foundation.glb  goblin.glb  tower.glb
src/: main.rs  plugins.rs  startups.rs  structs.rs  systems.rs
src/plugins/: bullet_plugin.rs  settings_plugin.rs  target_plugin.rs  tower_plugin.rs
src/startups/: asset_loading.rs  setup_ui.rs  spawn_basic_scene.rs  spawn_camera.rs
src/structs/: bullet.rs  game_assets.rs  health.rs  resolution_settings.rs  resolution_text.rs  target.rs  tower.rs
src/systems/: bullet_collision.rs  bullet_despawn.rs  camera_controls.rs  move_bullets.rs  move_target.rs  on_resize_system.rs  target_death.rs  toggle_resolution.rs  tower_shooting.rs
